<resources>
    <string name="app_name">CekOngkirApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cek_ongkos_kirim">cek ongkos kirim</string>
    <string name="kota_asal">Kota asal</string>
    <string name="kota_tujuan">Kota tujuan</string>
    <string name="lacak_no_resi">Lacak No. resi</string>
    <string name="cari_kota">Cari Kota</string>
    <string name="nama_kecamatan">Nama Kecamatan</string>
    <string name="nama_kota">Nama Kota</string>
    <string name="pos">pos</string>
    <string name="pos_indonesia_pos">POS INDONESIA (POS)</string>
    <string name="paket_kilat_khusus">Paket Kilat Khusus</string>
    <string name="_2_3_hari">2 sampai 3 HARI</string>
    <string name="idr_20_000">IDR 20.000</string>
    <string name="harga_ongkos_kirim_1_kg">Harga ongkos kirim / 1 KG</string>
    <string name="masukan_no_resi">Masukan No. Resi</string>
    <string name="pilih_kurir">Pilih Kurir</string>
    <string name="lacak">Lacak</string>
    <string name="status_pengiriman">Status Pengiriman</string>
    <string name="status">Status</string>
    <string name="receiver">Penerima</string>
    <string name="date">Date</string>
    <string name="history_tracking">History Pengiriman</string>
    <string name="example_date">2020-11-11</string>
    <string name="example_tracking_description">Paket telah sampai di Surabaya</string>
    <string name="sample_waybill">000421030564</string>
    <string name="sample_status">DELIVERED</string>
    <string name="sample_courier">SiCepat</string>

    <string-array name="courier">
        <item>POS</item>
        <item>Wahana</item>
        <item>JNT</item>
        <item>SAP</item>
        <item>SiCepat</item>
        <item>JET</item>
        <item>DSE</item>
        <item>First</item>
        <item>Ninja</item>
        <item>Lion</item>
        <item>IDL</item>
        <item>REX</item>
        <item>IDE</item>
        <item>Sentral</item>
    </string-array>
</resources>