<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_label_waybill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_waybill"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_status"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_waybill"/>

        <TextView
            android:id="@+id/tv_label_courier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_4d79ff"
            android:text="@string/sample_courier"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@+id/tv_label_waybill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_label_status"
            android:paddingStart="7dp"
            android:paddingTop="2dp"
            android:paddingEnd="7dp"
            android:paddingBottom="2dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_f6f0f0"
            app:layout_constraintTop_toBottomOf="@id/tv_label_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>