<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tracking_result.TrackingResultFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh_waybill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                
                <TextView
                    android:id="@+id/title_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pengiriman"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp"/>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/label_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="12sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/label_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receiver"
                        android:textSize="12sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/label_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="12sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/tv_receiver"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receiver"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="13sp"
                        android:layout_weight="1"
                        android:padding="5dp"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/history_tracking"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:padding="5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tracking_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_tracking"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>